# currency-app

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  FINDINGS.md  Jenkinsfile  README.md  docker-compose.hardened.yaml  docker-compose.yaml  main.py  pyproject.toml  ruff.toml  sbom.json  trivy-report.json
helm/yadro-app/: Chart.yaml  values.yaml
helm/yadro-app/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: app.py  models.py
src/api/: main.py
src/api/routes/: info.py
src/client/: cbrf_currency_client.py  currency_client.py
src/config/: config.py
src/parser/: currency_parser.py  xml_parser.py
src/service/: currency_service.py
src/setup/: app_factory.py  di.py
