[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.9.1",
    "fastapi[standard]>=0.135.1",
    "faststream>=0.6.7",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
